--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -902,7 +902,7 @@
    "outputs": [],
    "source": [
     "gdf_nsw.to_crs(epsg=4326, inplace=True)\n",
-    "gdf_nsw.to_file('data/nsw_poi.geojson', driver=\"GeoJSON\")  "
+    "gdf_nsw.to_file('data/nsw_poi.json', driver=\"GeoJSON\")  "
    ]
   },
   {
@@ -974,7 +974,7 @@
    "outputs": [],
    "source": [
     "gdf.to_crs(epsg=4326, inplace=True)\n",
-    "gdf.to_file('data/nsw_neighborhood.geojson', driver=\"GeoJSON\")  "
+    "gdf.to_file('data/nsw_neighborhood.json', driver=\"GeoJSON\")  "
    ]
   },
   {
@@ -995,7 +995,7 @@
    "outputs": [],
    "source": [
     "nsw.to_crs(epsg=4326, inplace=True)\n",
-    "nsw.to_file('data/nsw_polygon.geojson', driver=\"GeoJSON\")  "
+    "nsw.to_file('data/nsw_polygon.json', driver=\"GeoJSON\")  "
    ]
   },
   {
@@ -1007,7 +1007,7 @@
    "source": [
     "data = {}\n",
     "for file in os.listdir('data'):\n",
-    "    if file.endswith('.geojson'):\n",
+    "    if file.endswith('.json'):\n",
     "        name, ext = os.path.splitext(file)\n",
     "        data[name] = gpd.read_file(os.path.join('data', file))"
    ]
